2012-02-26  Rajarshi Guha  <guhar@niaaa-lptroach.niaaa.nih.gov>

	* inst/doc/rcdk.Rnw: Updated vignette to not evaluate all descriptors for all molecules. 
	Instead we now hand pick a few descriptors for the example on predictive models

2012-02-23  Rajarshi Guha  <guhar@dk31r9a06lp5a.niddk.nih.gov>

	* man/getfp.Rd: Updated documentation for the new parameters in
	get.fingerprint and iload.molecules

2012-02-22  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/rcdk.R (get.fingerprint): Updated to manually check for
	exceptions and if one occurs optionally print it out (depending on
	the value of he verbose parameter)

2011-12-13  Rajarshi Guha  <guhar@citdcssgoldi7lt.cit.nih.gov>

	* Updated NAMESPACE to export the .get.desc.value method

2011-11-01  Rajarshi Guha  <guhar@OfficeMac.local>
	
	* Convert package to use a namespace
	
	* Updated to use CDK 1.4.5

2011-10-04  Rajarshi Guha  <guhar@OfficeMac.local>

	* Updated to latest CDK 1.4.x branch, so that SDF writing now
	properly takes into account aromatic bond types.

2011-08-10  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* man/loadmol.Rd: Added examples for using load.molecules

	* R/iterating.R (hasNext.iload.molecules): Made more robust by
	checking that the file exists before trying to load it

	* R/io.R (load.molecules): If non-existant file is specified we
	now report the error properly

2011-07-23  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>
	
	* Updated to latest CDK library

2011-06-19  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/formula.R (set.charge.formula): Updated default argument to
	match docs

	* man/viewmol2d.Rd: Fixed documentation typo

	* man/setchargeformula.Rd: Fixed documentation error

2011-06-18  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/visual.R (view.molecule.2d): Updated some methods to make use
	of the OS X helper. This allows users on OS X to view single