@@ -1,6 +1,6 @@
 Package: rcdk
-Version: 3.1.7
-Date: 2012-02-22
+Version: 3.1.8
+Date: 2012-03-09
 Title: rcdk - Interface to the CDK Libraries
 Author: Rajarshi Guha <rajarshi.guha@gmail.com>
 Maintainer: Rajarshi Guha <rajarshi.guha@gmail.com>
